tests/compile-fail/order_requires_column_from_same_table.rs
#[macro_use]
extern crate yaqb;

use yaqb::*;

table! {
    users {
        id -> Serial,
    }
}

table! {
    posts {
        id -> Serial,
    }
}

fn main() {
    let source = users::table.order(posts::id);
    //~^ ERROR type mismatch
}
